# sblim-cmpi-dns

./: .cproject  .cvsignore  .project  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  configure.ac  provider-register.sh  sblim-cmpi-dns.spec.in
model/: Dns.mof  (+6 more)
provider/CIM_ConcreteJob/: .cvsignore  CIM_ConcreteJobExternal.cpp  CIM_ConcreteJobExternal.h  CIM_ConcreteJobInstance.cpp  CIM_ConcreteJobInstance.h  CIM_ConcreteJobInstanceName.cpp  CIM_ConcreteJobInstanceName.h  Makefile.am  makefile
provider/Linux_DnsAddressMatchListsForService/: .cvsignore  CmpiLinux_DnsAddressMatchListsForServiceProvider.cpp  CmpiLinux_DnsAddressMatchListsForServiceProvider.h  Linux_DnsAddressMatchListsForServiceDefaultImplementation.cpp  Linux_DnsAddressMatchListsForServiceDefaultImplementation.h  Linux_DnsAddressMatchListsForServiceExternal.cpp  Linux_DnsAddressMatchListsForServiceExternal.h  Linux_DnsAddressMatchListsForServiceFactory.cpp  Linux_DnsAddressMatchListsForServiceFactory.h  Linux_DnsAddressMatchListsForServiceInstance.cpp  Linux_DnsAddressMatchListsForServiceInstance.h  Linux_DnsAddressMatchListsForServiceInstanceName.cpp  Linux_DnsAddressMatchListsForServiceInstanceName.h  Linux_DnsAddressMatchListsForServiceInterface.h  Linux_DnsAddressMatchListsForServiceManualInstance.cpp  Linux_DnsAddressMatchListsForServiceManualInstance.h  Linux_DnsAddressMatchListsForServiceRepositoryExternal.cpp  Linux_DnsAddressMatchListsForServiceRepositoryExternal.h  Linux_DnsAddressMatchListsForServiceRepositoryInstance.cpp  Linux_DnsAddressMatchListsForServiceRepositoryInstance.h  Linux_DnsAddressMatchListsForServiceResourceAccess.cpp  Linux_DnsAddressMatchListsForServiceResourceAccess.h  Makefile.am
provider/Linux_DnsAllowQueryForService/: .cvsignore  CmpiLinux_DnsAllowQueryForServiceProvider.cpp  CmpiLinux_DnsAllowQueryForServiceProvider.h  Linux_DnsAllowQueryForServiceDefaultImplementation.cpp  Linux_DnsAllowQueryForServiceDefaultImplementation.h  Linux_DnsAllowQueryForServiceExternal.cpp  Linux_DnsAllowQueryForServiceExternal.h  Linux_DnsAllowQueryForServiceFactory.cpp  Linux_DnsAllowQueryForServiceFactory.h  Linux_DnsAllowQueryForServiceInstance.cpp  Linux_DnsAllowQueryForServiceInstance.h  Linux_DnsAllowQueryForServiceInstanceName.cpp  Linux_DnsAllowQueryForServiceInstanceName.h  Linux_DnsAllowQueryForServiceInterface.h  Linux_DnsAllowQueryForServiceManualInstance.cpp  Linux_DnsAllowQueryForServiceManualInstance.h  Linux_DnsAllowQueryForServiceRepositoryExternal.cpp  Linux_DnsAllowQueryForServiceRepositoryExternal.h  Linux_DnsAllowQueryForServiceRepositoryInstance.cpp  Linux_DnsAllowQueryForServiceRepositoryInstance.h  Linux_DnsAllowQueryForServiceResourceAccess.cpp  Linux_DnsAllowQueryForServiceResourceAccess.h  Makefile.am
provider/Linux_DnsAllowQueryForZone/: .cvsignore  CmpiLinux_DnsAllowQueryForZoneProvider.cpp  CmpiLinux_DnsAllowQueryForZoneProvider.h  Linux_DnsAllowQueryForZoneDefaultImplementation.cpp  Linux_DnsAllowQueryForZoneDefaultImplementation.h  Linux_DnsAllowQueryForZoneExternal.cpp  Linux_DnsAllowQueryForZoneExternal.h  Linux_DnsAllowQueryForZoneFactory.cpp  Linux_DnsAllowQueryForZoneFactory.h  Linux_DnsAllowQueryForZoneInstance.cpp  Linux_DnsAllowQueryForZoneInstance.h  Linux_DnsAllowQueryForZoneInstanceName.cpp  Linux_DnsAllowQueryForZoneInstanceName.h  Linux_DnsAllowQueryForZoneInterface.h  Linux_DnsAllowQueryForZoneManualInstance.cpp  Linux_DnsAllowQueryForZoneManualInstance.h  Linux_DnsAllowQueryForZoneRepositoryExternal.cpp  Linux_DnsAllowQueryForZoneRepositoryExternal.h  Linux_DnsAllowQueryForZoneRepositoryInstance.cpp  Linux_DnsAllowQueryForZoneRepositoryInstance.h  Linux_DnsAllowQueryForZoneResourceAccess.cpp  Linux_DnsAllowQueryForZoneResourceAccess.h  Makefile.am
provider/Linux_DnsAllowRecursionForService/: .cvsignore  CmpiLinux_DnsAllowRecursionForServiceProvider.cpp  CmpiLinux_DnsAllowRecursionForServiceProvider.h  Linux_DnsAllowRecursionForServiceDefaultImplementation.cpp  Linux_DnsAllowRecursionForServiceDefaultImplementation.h  Linux_DnsAllowRecursionForServiceExternal.cpp  Linux_DnsAllowRecursionForServiceExternal.h  Linux_DnsAllowRecursionForServiceFactory.cpp  Linux_DnsAllowRecursionForServiceFactory.h  Linux_DnsAllowRecursionForServiceInstance.cpp  Linux_DnsAllowRecursionForServiceInstance.h  Linux_DnsAllowRecursionForServiceInstanceName.cpp  Linux_DnsAllowRecursionForServiceInstanceName.h  Linux_DnsAllowRecursionForServiceInterface.h  Linux_DnsAllowRecursionForServiceManualInstance.cpp  Linux_DnsAllowRecursionForServiceManualInstance.h  Linux_DnsAllowRecursionForServiceRepositoryExternal.cpp  Linux_DnsAllowRecursionForServiceRepositoryExternal.h  Linux_DnsAllowRecursionForServiceRepositoryInstance.cpp  Linux_DnsAllowRecursionForServiceRepositoryInstance.h  Linux_DnsAllowRecursionForServiceResourceAccess.cpp  Linux_DnsAllowRecursionForServiceResourceAccess.h  Makefile.am
provider/Linux_DnsAllowUpdateForZone/: .cvsignore  CmpiLinux_DnsAllowUpdateForZoneProvider.cpp  CmpiLinux_DnsAllowUpdateForZoneProvider.h  Linux_DnsAllowUpdateForZoneDefaultImplementation.cpp  Linux_DnsAllowUpdateForZoneDefaultImplementation.h  Linux_DnsAllowUpdateForZoneExternal.cpp  Linux_DnsAllowUpdateForZoneExternal.h  Linux_DnsAllowUpdateForZoneFactory.cpp  Linux_DnsAllowUpdateForZoneFactory.h  Linux_DnsAllowUpdateForZoneInstance.cpp  Linux_DnsAllowUpdateForZoneInstance.h  Linux_DnsAllowUpdateForZoneInstanceName.cpp  Makefile.am  (+10 more)
resource-access/: .cvsignore  Makefile.am  bttest.c  conf.lexer.l  conf.parser.y  dnssupport.c  dnssupport.conf  dnssupport.h  dnstest.c  dynaloader.sh  execscripts.h  makefile  parser_support.c  parser_support.h  perlstr.h  perlxsi.c  readzones.pl  rrhandle.c  rrhandle.h  scripts.h  service.c  service.h  smt_dns_ra_cache.h  smt_dns_ra_perlstr.h  smt_dns_ra_rrhandle.c  smt_dns_ra_rrhandle.h  smt_dns_ra_scripts.h  smt_dns_ra_service.c  smt_dns_ra_service.h  smt_dns_ra_support.c  smt_dns_ra_support.conf.in  smt_dns_ra_support.conf.pre.in  smt_dns_ra_support.h  smt_dns_ra_support.h.in  util.c  util.h  writezones.pl  zone.lexer.l  zone.parser.y  zonecache.c  (+1 more)
(+1276 files in other folders)
